<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewWelcomeMessage"
        android:layout_width="408dp"
        android:layout_height="91dp"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/send_your_coordinates"
        android:textAlignment="center"

        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.47" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="136dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.865">

        <ImageButton
            android:id="@+id/imageButtonEmail"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="131dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/email"
            android:foregroundGravity="center"
            android:onClick="imageButtonEmailOnClick"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/mail" />

        <Space
            android:layout_width="0dp"
            android:layout_height="27dp"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/imageButtonSMS"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="121dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/sms"
            android:onClick="imageButtonSMSOnClick"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/sms" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="290dp"
        android:background="#0B9FA5"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textViewLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="@string/latitude"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/textViewLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/longitude"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>